feat: All SonarQube issues were fixed